--- a/math-quiz/src/App.sass
+++ b/math-quiz/src/App.sass
@@ -8,6 +8,7 @@ body
     background-size: cover
 
 #game
+    position: relative
     background-color: white
     border-radius: 15px
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.25)
@@ -62,7 +63,7 @@ body
     
     #submitButton
         background-image: url("../public/check-mark.svg")
-        background-size: 60%
+        background-size: 50%
         background-position: center
         background-repeat: no-repeat 
         height: 42px
@@ -70,3 +71,17 @@ body
         float: right
         margin: 20px 0
         border-radius: 0 15px 15px 0
+    
+    #restartButton
+        background-image: url("../public/restart.svg")
+        background-size: 60%
+        background-position: center
+        background-repeat: no-repeat 
+        position: absolute
+        top: 0
+        left: 20px
+        height: 42px
+        width: 42px
+        float: right
+        margin: 20px 0
+        border-radius: 15px
