--- a/math-quiz/src/App.css
+++ b/math-quiz/src/App.css
@@ -28,6 +28,7 @@ body {
   color: gray;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-size: 24px;
 }
 #game h2 {
   color: #333;
@@ -63,6 +64,9 @@ body {
 #game button:nth-child(even) {
   margin-left: 4px;
 }
+#game .activeButton {
+  background-color: rgba(255, 163, 59, 0.4);
+}
 #game #submitButton {
   background-image: url("../public/check-mark.svg");
   background-size: 50%;
@@ -80,11 +84,29 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
-  top: 0;
-  left: 20px;
+  top: 25px;
+  left: 25px;
   height: 42px;
   width: 42px;
   float: right;
-  margin: 20px 0;
   border-radius: 15px;
+}
+#game .difficulties {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  text-align: right;
+}
+#game .difficulties button {
+  width: 75px;
+  display: block;
+  margin: 0;
+  border-radius: 0 0 10px 10px;
+}
+#game .difficulties button:first-child {
+  border-radius: 10px 10px 0 0;
+}
+#game .difficulties button:last-child {
+  border-radius: 10px;
+  margin-top: 4px;
 }/*# sourceMappingURL=App.css.map */
